fix:course api bugs
